examples/m17/invalid-and-incomplete-proof/incomplete-brace.athena
system IncompleteBrace {
  device PLC1 {
    type Switch
